# path_tracing

./: CMakeLists.txt  README.md
doc/: class.dot
inc/: beam.h  camera.h  intersect.h  kd_tree.h  light.h  macros.inc  material.h  model.h  object.h  read_model.h  scene.h  scene_para.h
scenes/Scene02/: room.mtl
src/: CMakeLists.txt  beam.cpp  camera.cpp  diff_object.cpp  emi_object.cpp  kd_tree.cpp  light.cpp  main.cpp  material.cpp  model.cpp  object.cpp  ref_object.cpp  refra_object.cpp  scene.cpp  scene_para.cpp
