CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(MC)
SET(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall -O3")
message(${CMAKE_CXX_FLAGS_RELEASE})
ADD_DEFINITIONS(-DTINYOBJLOADER_USE_DOUBLE)
INCLUDE_DIRECTORIES(/usr/local/include/eigen3)
ADD_SUBDIRECTORY(./src)
ADD_SUBDIRECTORY(./thirdparty/src)

